version/0.38/_sources/api/solver/_autosummary/settings/inlet_vent_1_child.rst.txt
:orphan:

.. _inlet_vent_1_child:

inlet_vent_child
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.inlet_vent_1_child
    :show-inheritance:

.. rubric:: Attributes

========================================   =================================================================

Attribute                                                                                            Summary

========================================   =================================================================
:ref:`name <name_5>`                                                                     Name of the object.

:ref:`phase <phase_31>`                        Provides an object description for phase-specific conditions.

:ref:`momentum <momentum_1>`                          Allows to change momentum model variables or settings.

:ref:`turbulence <turbulence_1>`                    Allows to change turbulence model variables or settings.

:ref:`thermal <thermal_1>`                             Allows to change thermal model variables or settings.

:ref:`radiation <radiation_2>`                               Radiation settings for this boundary-condition.

:ref:`species <species_7>`                             Allows to change species model variables or settings.

:ref:`discrete_phase <discrete_phase_1>`                   Allows to change DPM model variables or settings.

:ref:`multiphase <multiphase_4>`                    Allows to change multiphase model variables or settings.

:ref:`potential <potential>`                         Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                       Allows to change structure model variables or settings.

:ref:`uds <uds>`                                           Allows to change UDS model variables or settings.

:ref:`icing <icing_1>`                                   Allows to change icing model variables or settings.

:ref:`geometry <geometry_7>`                          Allows to change geometry model variables or settings.

========================================   =================================================================

.. rubric:: Methods

======================================   ======================================================================================================================

Method                                                                                                                                                  Summary

======================================   ======================================================================================================================
:ref:`display <display_2>`                   Show the selected zone surface. If the surface does not exist, this command creates it first and then displays it.

:ref:`create_surface <create_surface>`                                                                                        Create surface for selected zone.

======================================   ======================================================================================================================

.. rubric:: Included in:

==================================   ===========================================

Parent                                                                   Summary

==================================   ===========================================
:ref:`inlet_vent_1 <inlet_vent_1>`       Settings for boundary-condition object.

==================================   ===========================================

